Setting up app for testing

--- a/byte-buddy-gradle-plugin/settings.gradle
+++ b/byte-buddy-gradle-plugin/settings.gradle
@@ -3,3 +3,4 @@ include "android-plugin"
 include "android-plugin-test"
 include "common"
 include 'android-application-test'
+include 'android-application-test:app'
