--- a/byte-buddy-gradle-plugin/android-application-test/app/build.gradle
+++ b/byte-buddy-gradle-plugin/android-application-test/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
@@ -9,7 +9,7 @@ android {
     defaultConfig {
         applicationId "net.bytebuddy.android.test"
         minSdk 21
-        targetSdk 33
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -33,6 +33,7 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.0'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
