Adding system env to enable android project test

--- a/byte-buddy-gradle-plugin/settings.gradle
+++ b/byte-buddy-gradle-plugin/settings.gradle
@@ -2,5 +2,7 @@ include "mavenBridge"
 include "android-plugin"
 include "android-plugin-test"
 include "common"
-include 'android-application-test'
-include 'android-application-test:app'
+if (Objects.equals(System.getenv("ANDROID_TEST"), "true")) {
+    include "android-application-test"
+    include "android-application-test:app"
+}
