--- a/byte-buddy-gradle-plugin/android-application-test/app/build.gradle
+++ b/byte-buddy-gradle-plugin/android-application-test/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'net.bytebuddy.byte-buddy-gradle-plugin'
 }
 
 android {
