--- a/byte-buddy-gradle-plugin/android-application-test/build.gradle
+++ b/byte-buddy-gradle-plugin/android-application-test/build.gradle
@@ -1,12 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    def pom = new XmlSlurper().parse(rootProject.file('pom.xml'))
+    ext.bytebuddyVersion = pom.parent.version.text().toString()
     repositories {
         mavenCentral()
         google()
     }
+    def pluginLocation = new File("${rootProject.buildDir}/libs/byte-buddy-gradle-plugin-${bytebuddyVersion}.jar").canonicalFile
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.0'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10'
+        classpath files(pluginLocation)
     }
 }
 
