--- a/byte-buddy-gradle-plugin/android-application-test/app/build.gradle
+++ b/byte-buddy-gradle-plugin/android-application-test/app/build.gradle
@@ -34,6 +34,7 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.0'
+    bytebuddy project(":jar-bytebuddy-plugin")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
