--- a/byte-buddy-gradle-plugin/android-application-test/aar-byebuddy-target/build.gradle
+++ b/byte-buddy-gradle-plugin/android-application-test/aar-byebuddy-target/build.gradle
@@ -1,20 +1,17 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'net.bytebuddy.byte-buddy-gradle-plugin'
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "net.bytebuddy.android.test"
         minSdk 21
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -33,10 +30,6 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.5.0'
-    implementation project(":aar-byebuddy-target")
-    bytebuddy project(":jar-bytebuddy-plugin")
+    implementation 'com.google.android.material:material:1.6.1'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
