Updated android tests

--- a/byte-buddy-gradle-plugin/android-application-test/jar-bytebuddy-plugin/build.gradle
+++ b/byte-buddy-gradle-plugin/android-application-test/jar-bytebuddy-plugin/build.gradle
@@ -2,12 +2,9 @@ plugins {
     id 'java-library'
     id 'org.jetbrains.kotlin.jvm'
 }
+apply from: "$rootDir/versioning.gradle"
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
-}
-
-dependencies {
-    implementation "net.bytebuddy:byte-buddy:$bytebuddy_version"
 }
