--- a/byte-buddy-gradle-plugin/android-application-test/aar-bytebuddy-plugin/build.gradle
+++ b/byte-buddy-gradle-plugin/android-application-test/aar-bytebuddy-plugin/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
+apply from: "$rootDir/versioning.gradle"
 
 android {
     compileSdk 32
@@ -27,9 +28,4 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-}
-
-dependencies {
-    implementation "net.bytebuddy:byte-buddy:$bytebuddy_version"
-    implementation 'androidx.appcompat:appcompat:1.5.0'
 }
