--- a/byte-buddy-gradle-plugin/android-application-test/aar-bytebuddy-target/build.gradle
+++ b/byte-buddy-gradle-plugin/android-application-test/aar-bytebuddy-target/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
+apply from: "$rootDir/versioning.gradle"
 
 android {
     compileSdk 32
