--- a/byte-buddy-gradle-plugin/android-application-test/app/build.gradle
+++ b/byte-buddy-gradle-plugin/android-application-test/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'net.bytebuddy.byte-buddy-gradle-plugin'
 }
+apply from: "$rootDir/versioning.gradle"
 
 android {
     compileSdk 32
@@ -34,9 +35,9 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.0'
-    implementation project(':aar-bytebuddy-target')
-    bytebuddy project(":jar-bytebuddy-plugin")
-    bytebuddy project(":aar-bytebuddy-plugin")
+    implementation project(':android-application-test:aar-bytebuddy-target')
+    bytebuddy project(":android-application-test:jar-bytebuddy-plugin")
+    bytebuddy project(":android-application-test:aar-bytebuddy-plugin")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
