--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,6 @@ jobs:
     runs-on: ubuntu-20.04
     continue-on-error: true
     steps:
-      - uses: step-security/harden-runner@dd2c410b088af7c0dc8046f3ac9a8f4148492a95 # V1.4.5
-        with:
-          egress-policy: audit
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
         with:
@@ -36,9 +33,6 @@ jobs:
         java: [ 8, 11, 17, 18 ]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: step-security/harden-runner@dd2c410b088af7c0dc8046f3ac9a8f4148492a95 # V1.4.5
-        with:
-          egress-policy: audit
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
         with:
@@ -57,9 +51,6 @@ jobs:
         java: [ 8, 11 ]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: step-security/harden-runner@dd2c410b088af7c0dc8046f3ac9a8f4148492a95 # V1.4.5
-        with:
-          egress-policy: audit
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
         with:
@@ -77,9 +68,6 @@ jobs:
         java: [ 9, 10, 12, 13, 14, 15, 16 ]
     runs-on: ubuntu-20.04
     steps:
-      - uses: step-security/harden-runner@dd2c410b088af7c0dc8046f3ac9a8f4148492a95 # V1.4.5
-        with:
-          egress-policy: audit
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
         with:
@@ -98,9 +86,6 @@ jobs:
         java: [ 8 ]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: step-security/harden-runner@dd2c410b088af7c0dc8046f3ac9a8f4148492a95 # V1.4.5
-        with:
-          egress-policy: audit
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
         with:
@@ -118,9 +103,6 @@ jobs:
         java: [ 6, 7 ]
     runs-on: ubuntu-20.04
     steps:
-      - uses: step-security/harden-runner@dd2c410b088af7c0dc8046f3ac9a8f4148492a95 # V1.4.5
-        with:
-          egress-policy: audit
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/cache@0865c47f36e68161719c5b124609996bb5c40129 # v3.0.5
         with:
@@ -142,7 +124,14 @@ jobs:
     steps:
       - uses: step-security/harden-runner@dd2c410b088af7c0dc8046f3ac9a8f4148492a95 # V1.4.5
         with:
-          egress-policy: audit
+          egress-policy: block
+          allowed-endpoints: >
+            api.azul.com:443
+            artifactcache.actions.githubusercontent.com:443
+            blob.core.windows.net:443
+            cdn.azul.com:443
+            github.com:443
+            repo.maven.apache.org:443
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
         with:
