--- a/byte-buddy-gradle-plugin/android-plugin/build.gradle
+++ b/byte-buddy-gradle-plugin/android-plugin/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    implementation project(':common')
+    api gradleApi()
     compileOnly "com.android.tools.build:gradle:7.2.0"
     testImplementation "junit:junit:4.13.2"
     testImplementation "org.mockito:mockito-core:4.6.1"
