--- a/byte-buddy-gradle-plugin/build.gradle
+++ b/byte-buddy-gradle-plugin/build.gradle
@@ -32,7 +32,9 @@ version = pom.parent.version.text().toString()
 
 dependencies {
     implementation gradleApi()
-    fatJar project(':android-plugin')
+    if (targetCompatibility >= JavaVersion.VERSION_1_8 && sourceCompatibility >= JavaVersion.VERSION_1_8) {
+        fatJar project(':android-plugin')
+    }
     compileOnly group: 'com.google.code.findbugs', name: 'findbugs-annotations', version: outerPom.properties.'version.utility.findbugs'
     compileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: outerPom.properties.'version.utility.jsr305'
     testImplementation gradleTestKit()
