Clean up project.

--- a/byte-buddy-gradle-plugin/android-application-test/aar-bytebuddy-plugin/src/main/AndroidManifest.xml
+++ b/byte-buddy-gradle-plugin/android-application-test/aar-bytebuddy-plugin/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="net.bytebuddy.plugin.test.aar" />
+<manifest package="net.bytebuddy.plugin.gradle.test.aar" />
