Add missing bits and clean up Gradle build for Java 6/7.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ maven-checksum-extension.jar
 # Gradle
 .gradle/
 byte-buddy-gradle-plugin/build/
+byte-buddy-gradle-plugin/**/build/
 byte-buddy-gradle-plugin/buildSrc/build/
 byte-buddy-gradle-plugin/gradle/build/
 gradle-*-bin.zip
