--- a/byte-buddy-gradle-plugin/android-application-test/aar-bytebuddy-plugin/build.gradle
+++ b/byte-buddy-gradle-plugin/android-application-test/aar-bytebuddy-plugin/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.library'
 }
-apply from: "$rootDir/versioning.gradle"
+apply from: "$rootDir/bytebuddy.gradle"
 
 android {
     compileSdk 32
