--- a/byte-buddy-gradle-plugin/android-application-test/jar-bytebuddy-plugin/build.gradle
+++ b/byte-buddy-gradle-plugin/android-application-test/jar-bytebuddy-plugin/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java-library'
 }
-apply from: "$rootDir/versioning.gradle"
+apply from: "$rootDir/bytebuddy.gradle"
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
