--- a/byte-buddy-gradle-plugin/android-application-test/app/build.gradle
+++ b/byte-buddy-gradle-plugin/android-application-test/app/build.gradle
@@ -26,12 +26,14 @@ android {
     }
 }
 
+def outerPom = new groovy.xml.XmlSlurper().parse(rootProject.file('../pom.xml'))
+
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation group: 'androidx.appcompat', name: 'appcompat', version: '1.5.0'
     implementation project(':android-application-test:aar-bytebuddy-target')
-    bytebuddy project(":android-application-test:jar-bytebuddy-plugin")
-    bytebuddy project(":android-application-test:aar-bytebuddy-plugin")
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    byteBuddy project(":android-application-test:jar-bytebuddy-plugin")
+    byteBuddy project(":android-application-test:aar-bytebuddy-plugin")
+    testImplementation group: 'junit', name: 'junit', version: outerPom.properties.'version.junit'
+    androidTestImplementation group: 'androidx.test.ext', name: 'junit', version: '1.1.3'
+    androidTestImplementation group: 'androidx.test.espresso', name: 'espresso-core', version: '3.4.0'
 }
