--- a/byte-buddy-gradle-plugin/settings.gradle
+++ b/byte-buddy-gradle-plugin/settings.gradle
@@ -7,13 +7,13 @@ if (!raw.startsWith("1.") && raw.contains(".")) {
 } else {
     current = JavaVersion.toVersion(raw)
 }
-if (current > JavaVersion.VERSION_1_7) {
+if (current > JavaVersion.VERSION_1_7 && current != JavaVersion.VERSION_9) {
     include "android-plugin"
-}
-if (Boolean.getBoolean("net.bytebuddy.build.gradle.android.test")) {
-    include "android-application-test"
-    include "android-application-test:app"
-    include "android-application-test:aar-bytebuddy-target"
-    include "android-application-test:aar-bytebuddy-plugin"
-    include "android-application-test:jar-bytebuddy-plugin"
+    if (Boolean.getBoolean("net.bytebuddy.build.gradle.android.test")) {
+        include "android-application-test"
+        include "android-application-test:app"
+        include "android-application-test:aar-bytebuddy-target"
+        include "android-application-test:aar-bytebuddy-plugin"
+        include "android-application-test:jar-bytebuddy-plugin"
+    }
 }
