--- a/byte-buddy-agent/pom.xml
+++ b/byte-buddy-agent/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-parent</artifactId>
-        <version>1.12.17-SNAPSHOT</version>
+        <version>1.12.17</version>
     </parent>
 
     <artifactId>byte-buddy-agent</artifactId>
@@ -18,7 +18,7 @@
         <packages.list>net.bytebuddy.agent,net.bytebuddy.agent.utility.nullability</packages.list>
         <native.compiler.32>i686-w64-mingw32-gcc</native.compiler.32>
         <native.compiler.64>x86_64-w64-mingw32-gcc</native.compiler.64>
-        <net.bytebuddy.test.jnapath/>
+        <net.bytebuddy.test.jnapath />
     </properties>
 
     <name>Byte Buddy agent</name>
