Extracting GradleBuildLogger to common submodule

--- a/byte-buddy-gradle-plugin/settings.gradle
+++ b/byte-buddy-gradle-plugin/settings.gradle
@@ -7,6 +7,7 @@ if (!raw.startsWith("1.") && raw.contains(".")) {
 } else {
     current = JavaVersion.toVersion(raw)
 }
+include "common"
 // The Android plugin requires at least Java 8 and does not work with Java 9 for an obscure error.
 if (current > JavaVersion.VERSION_1_7 && current != JavaVersion.VERSION_1_9) {
     include "android-plugin"
