Passing Gradle's logger to ByteBuddyAndroidService

--- a/byte-buddy-gradle-plugin/android-plugin/build.gradle
+++ b/byte-buddy-gradle-plugin/android-plugin/build.gradle
@@ -14,5 +14,6 @@ repositories {
 
 dependencies {
     api gradleApi()
+    implementation project(":common")
     compileOnly group: 'com.android.tools.build', name: 'gradle', version: '7.2.0'
 }
