--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,11 @@ jobs:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
         with:
-          java-version: 19-ea
+          java-version: 20-ea
           distribution: zulu
           cache: maven
       - name: Build project
-        run: ./mvnw verify -Pjava19
+        run: ./mvnw verify -Pjava20 -Dnet.bytebuddy.experimental
         continue-on-error: false
   hotspot-supported:
     name: Any (supported)
@@ -30,7 +30,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-20.04, macos-11, windows-2022 ]
-        java: [ 8, 11, 17, 18 ]
+        java: [ 8, 11, 17, 19 ]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
@@ -65,7 +65,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ 9, 10, 12, 13, 14, 15, 16 ]
+        java: [ 9, 10, 12, 13, 14, 15, 16, 18 ]
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
