--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
   hotspot-ea:
     name: HotSpot (EA)
     runs-on: ubuntu-20.04
+    needs: [ extended ]
     continue-on-error: true
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
@@ -32,6 +33,7 @@ jobs:
         os: [ ubuntu-20.04, macos-11, windows-2022 ]
         java: [ 8, 11, 17, 19 ]
     runs-on: ${{ matrix.os }}
+    needs: [ extended ]
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
@@ -50,6 +52,7 @@ jobs:
         os: [ ubuntu-20.04, macos-11, windows-2022 ]
         java: [ 8, 11 ]
     runs-on: ${{ matrix.os }}
+    needs: [ extended ]
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
@@ -67,6 +70,7 @@ jobs:
       matrix:
         java: [ 9, 10, 12, 13, 14, 15, 16, 18 ]
     runs-on: ubuntu-20.04
+    needs: [ extended ]
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
@@ -85,6 +89,7 @@ jobs:
         os: [ ubuntu-20.04, windows-2022 ]
         java: [ 8 ]
     runs-on: ${{ matrix.os }}
+    needs: [ extended ]
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
@@ -102,6 +107,7 @@ jobs:
       matrix:
         java: [ 6, 7 ]
     runs-on: ubuntu-20.04
+    needs: [ extended ]
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/cache@0865c47f36e68161719c5b124609996bb5c40129 # v3.0.5
@@ -119,7 +125,6 @@ jobs:
   extended:
     name: Extended build
     runs-on: ubuntu-20.04
-    needs: [ hotspot-ea, hotspot-supported, j9-supported, hotspot-unsupported, hotspot-32, hotspot-legacy ]
     if: github.event_name == 'push'
     steps:
       - uses: step-security/harden-runner@dd2c410b088af7c0dc8046f3ac9a8f4148492a95 # V1.4.5
@@ -151,7 +156,7 @@ jobs:
   release:
     name: Release new version
     runs-on: ubuntu-20.04
-    needs: [ extended ]
+    needs: [ extended, hotspot-ea, hotspot-supported, j9-supported, hotspot-unsupported, hotspot-32, hotspot-legacy ]
     if: github.event_name == 'push' && startsWith(github.event.head_commit.message, '[release]')
     permissions:
       contents: write
