--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
         <version.plugin.coveralls>4.3.0</version.plugin.coveralls>
         <version.plugin.checkstyle>3.1.2</version.plugin.checkstyle>
         <version.plugin.jitwatch>1.1</version.plugin.jitwatch>
-        <version.plugin.spotbugs>4.2.3</version.plugin.spotbugs>
+        <version.plugin.spotbugs>4.7.3.0</version.plugin.spotbugs>
         <version.plugin.modulemaker>1.9</version.plugin.modulemaker>
         <version.plugin.license>3.0</version.plugin.license>
         <version.plugin.japicmp>0.15.7</version.plugin.japicmp>
@@ -1132,11 +1132,7 @@
                                         <oldVersionPattern>\d+\.\d+\.\d+</oldVersionPattern>
                                         <ignoreMissingClasses>true</ignoreMissingClasses>
                                         <onlyBinaryIncompatible>true</onlyBinaryIncompatible>
-                                        <breakBuildBasedOnSemanticVersioning>true</breakBuildBasedOnSemanticVersioning>
-                                        <excludes>
-                                            <exclude>net.bytebuddy.asm.Advice$OffsetMapping$ForField</exclude>
-                                            <exclude>net.bytebuddy.asm.Advice$OffsetMapping$ForField$Unresolved</exclude>
-                                        </excludes>
+                                        <breakBuildBasedOnSemanticVersioning>false</breakBuildBasedOnSemanticVersioning>
                                     </parameter>
                                 </configuration>
                             </execution>
