--- a/pom.xml
+++ b/pom.xml
@@ -1130,6 +1130,9 @@
                                         <ignoreMissingClasses>true</ignoreMissingClasses>
                                         <onlyBinaryIncompatible>true</onlyBinaryIncompatible>
                                         <breakBuildBasedOnSemanticVersioning>true</breakBuildBasedOnSemanticVersioning>
+                                        <excludes>
+                                            <exclude>net.bytebuddy.asm</exclude>
+                                        </excludes>
                                     </parameter>
                                 </configuration>
                             </execution>
